K1J-358: Fix mixup with event.action and event.type