@@ -19,7 +19,6 @@
 package se.inera.intyg.intygstjanst.web.integration;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import se.inera.clinicalprocess.healthcond.certificate.v1.ErrorIdType;
 import se.inera.intyg.clinicalprocess.healthcond.certificate.listknownrecipients.v1.ListKnownRecipientsResponderInterface;
@@ -39,7 +38,7 @@ public class ListKnownRecipientsResponderImpl implements ListKnownRecipientsResp
 
     @Override
     @PrometheusTimeMethod
-    @PerformanceLogging(eventType = "list-recipients", eventAction = MdcLogConstants.EVENT_TYPE_ACCESSED)
+    @PerformanceLogging(eventAction = "list-recipients", eventType = MdcLogConstants.EVENT_TYPE_ACCESSED)
     public ListKnownRecipientsResponseType listKnownRecipients(String logicalAddress, ListKnownRecipientsType request) {
         ListKnownRecipientsResponseType response = new ListKnownRecipientsResponseType();
         List<RecipientType> recipientTypeList = recipientService.listRecipients().stream()
@@ -50,7 +49,7 @@ public class ListKnownRecipientsResponderImpl implements ListKnownRecipientsResp
                 recipientType.setTrusted(r.isTrusted());
                 return recipientType;
             })
-            .collect(Collectors.toList());
+            .toList();
 
         if (recipientTypeList.isEmpty()) {
             response.setResult(ResultTypeUtil.errorResult(ErrorIdType.APPLICATION_ERROR, "No recipients found!"));
